# TOV602M-Igreypt-kerfi

./: .gitignore  CMakeLists.txt
src/: main.cpp  mode_manager.cpp  mode_manager.hpp  myndavel.cpp  myndavel.hpp  skotmark_tracking.cpp  skotmark_tracking.hpp  skotturns_stjornun.cpp  skotturns_stjornun.hpp  uart_link.cpp  uart_link.hpp
